Test2 is lookin pretty god

--- a/Test.html
+++ b/Test.html
@@ -32,17 +32,9 @@
         <a style="margin-left: -2.3px;" href="#Trash"><i class="material-icons">delete</i>Trash</a>
     </div>
 
-    <!-- <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
-    <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
-    <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
-    <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
-    <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
-    <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
-    <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
-    <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
-    <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
-    <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
-    <img class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300"> -->
+    <div class="images">
+        <img style="position: sticky;" class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
+    </div>
 </body>
 
 </html>
