trying Test3 with the thing always there

--- a/Test2.html
+++ b/Test2.html
@@ -30,7 +30,7 @@
 
     <div id="main">
         <button class="openbtn" onclick="toggleNav()">☰ Open Sidebar</button>
-        <!-- <img style="position: flex;" class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300"> -->
+        <img style="position: flex;" class="img-fluid" src="Photos from gphotos for testing/20200620_133243.jpg" , alt="Cat" , width="300">
     </div>
 
 </html>
