Added all(?) the side panel buttons

--- a/Basic PSS Frontend/main.HTML
+++ b/Basic PSS Frontend/main.HTML
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <!-- Boilerplate -->
+    <!-- Basic Boilerplate -->
     <meta charset='utf-8'>
     <title>PSS</title>
     <link rel="icon" href="gphotos icon.png">
@@ -19,8 +19,16 @@
 </head>
 
 <body style="background-color: black;">
-    <!-- Star Outline Icon -->
-    <button class="icon_btn"><span class="material-icons">&#xf06f;</span><a class="icon_btn_text" href="#">Favorites</a></button>
+    <div style="align-content: space-between;">
+        <button class="icon_btn"><span class="material-icons">&#xe3f4;</span><a class="icon_btn_text" href="#">Photos</a></button> <!-- Image Icon -->
+        <button class="icon_btn"><span class="material-icons">&#xe411;</span><a class="icon_btn_text" href="#">Albums</a></button> <!-- Photo Album Icon -->
+        <button class="icon_btn"><span class="material-icons">&#xe838;</span><a class="icon_btn_text" href="#">Starred</a></button> <!-- Star Icon -->
+        <button class="icon_btn"><span class="material-icons">&#xe872;</span><a class="icon_btn_text" href="#">Trash</a></button> <!-- Filled Trash Icon -->
+        <!-- <button class="icon_btn"><span class="material-icons">&#xe92e;</span><a class="icon_btn_text" href="#">Trash</a></button> Hollow Trash Icon -->
+        <button class="icon_btn"><span class="material-icons">&#xe8b6;</span><a class="icon_btn_text" href="#">Search</a></button> <!-- Search Icon -->
+        <button class="icon_btn"><span class="material-icons">&#xe2c3;</span><a class="icon_btn_text" href="#">Upload</a></button> <!-- Cloud Upload Icon -->
+        <button class="icon_btn"><span class="material-icons">&#xe8b8;</span><a class="icon_btn_text" href="#">Settings</a></button> <!-- Gear Icon -->
+    </div>
 </body>
 
 </html>
