--- a/Basic PSS Frontend/main.HTML
+++ b/Basic PSS Frontend/main.HTML
@@ -18,16 +18,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
-<body style="background-color: black;">
+<body style="background-color: black; margin-left: 0px; margin-top: 0px;">
     <div style="align-content: space-between;">
-        <button class="icon_btn"><span class="material-icons">&#xe3f4;</span><a class="icon_btn_text" href="#">Photos</a></button> <!-- Image Icon -->
-        <button class="icon_btn"><span class="material-icons">&#xe411;</span><a class="icon_btn_text" href="#">Albums</a></button> <!-- Photo Album Icon -->
-        <button class="icon_btn"><span class="material-icons">&#xe838;</span><a class="icon_btn_text" href="#">Starred</a></button> <!-- Star Icon -->
-        <button class="icon_btn"><span class="material-icons">&#xe872;</span><a class="icon_btn_text" href="#">Trash</a></button> <!-- Filled Trash Icon -->
-        <!-- <button class="icon_btn"><span class="material-icons">&#xe92e;</span><a class="icon_btn_text" href="#">Trash</a></button> Hollow Trash Icon -->
-        <button class="icon_btn"><span class="material-icons">&#xe8b6;</span><a class="icon_btn_text" href="#">Search</a></button> <!-- Search Icon -->
-        <button class="icon_btn"><span class="material-icons">&#xe2c3;</span><a class="icon_btn_text" href="#">Upload</a></button> <!-- Cloud Upload Icon -->
-        <button class="icon_btn"><span class="material-icons">&#xe8b8;</span><a class="icon_btn_text" href="#">Settings</a></button> <!-- Gear Icon -->
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe3f4;</span><a class="icon_btn_text" href="Google.com">Photos</a></button> <!-- Image Icon -->
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe411;</span><a class="icon_btn_text" href="Google.com">Albums</a></button> <!-- Photo Album Icon -->
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe838;</span><a class="icon_btn_text" href="Google.com">Starred</a></button> <!-- Star Icon -->
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe92e;</span><a class="icon_btn_text" href="Google.com">Trash</a></button>
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe8b6;</span><a class="icon_btn_text" href="Google.com">Search</a></button> <!-- Search Icon -->
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe2c3;</span><a class="icon_btn_text" href="Google.com">Upload</a></button> <!-- Cloud Upload Icon -->
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe8b8;</span><a class="icon_btn_text" href="Google.com">Settings</a></button> <!-- Gear Icon -->
     </div>
 </body>
 
