Seems like HTML works in Blazor... committing before doing anything else.

--- a/Basic PSS Frontend/main.HTML
+++ b/Basic PSS Frontend/main.HTML
@@ -19,15 +19,15 @@
 </head>
 
 <body style="background-color: black; margin-left: 0px; margin-top: 0px;">
-    <div style="align-content: space-between;">
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe3f4;</span><a class="icon_btn_text" href="Google.com">Photos</a></button> <!-- Image Icon -->
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe411;</span><a class="icon_btn_text" href="Google.com">Albums</a></button> <!-- Photo Album Icon -->
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe838;</span><a class="icon_btn_text" href="Google.com">Starred</a></button> <!-- Star Icon -->
+    <nav style="align-content: space-between;">
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe3f4;</span><a class="icon_btn_text" href="Google.com">Photos</a></button>
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe411;</span><a class="icon_btn_text" href="Google.com">Albums</a></button>
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xf06f;</span><a class="icon_btn_text" href="Google.com">Starred</a></button>
         <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe92e;</span><a class="icon_btn_text" href="Google.com">Trash</a></button>
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe8b6;</span><a class="icon_btn_text" href="Google.com">Search</a></button> <!-- Search Icon -->
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe2c3;</span><a class="icon_btn_text" href="Google.com">Upload</a></button> <!-- Cloud Upload Icon -->
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe8b8;</span><a class="icon_btn_text" href="Google.com">Settings</a></button> <!-- Gear Icon -->
-    </div>
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe8b6;</span><a class="icon_btn_text" href="Google.com">Search</a></button>
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe2c3;</span><a class="icon_btn_text" href="Google.com">Upload</a></button>
+        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe8b8;</span><a class="icon_btn_text" href="Google.com">Settings</a></button>
+    </nav>
 </body>
 
 </html>
